# MqttProtbufExample

./: .gitmodules  CMakeLists.txt  conanfile.txt  machinehandle.cpp  machinehandle.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  notes.txt
tests/: CMakeLists.txt  Dozer.xml  Excavator.xml  Truck.xml  commsTests.cpp  templatetest.xml
